fix background image doesn't show on iphone

--- a/css/home.css
+++ b/css/home.css
@@ -48,28 +48,37 @@ p {
   padding: 60px 0px 20px 0px;
   font-size: 16px !important;
 }
+.img-mobile-bg {
+  padding: 0px;
+}
 
+@media screen and (min-width: 813px) {
+  .img-mobile-bg {
+    display: none;
+  }
+}
+
+@media screen and (width: 768px){
+  .img {
+    padding: 0px;
+  }
+}
 section.parallax {
   background: url("../img/bg.png") center center;
   min-height: 600px; 
   /* Create the parallax scrolling effect */
-  /* background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center !important;
   background-repeat: no-repeat !important;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; */
-
-  background-attachment: fixed;
-  background-position: 50% 50% !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
+  background-size: cover;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 812px) {
   section.parallax {
-    background-attachment: fixed !important;
-    min-height: 300px;
+    background: none;
+    min-height: 0px;
   }
 }
